Fix height on tablet

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -151,9 +151,6 @@ button {
 
 #home {
   height: 100vh;
-}
-
-section {
   min-height: 422px;
 }
 
